--- a/starter/cloudstorage/src/main/resources/application.properties
+++ b/starter/cloudstorage/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.error.whitelabel.enabled=false
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+spring.servlet.multipart.enabled=true
